# Kube_appli

./: Cargo.toml  README.md  info.rs  logs.rs  main.rs  policy.rs  spawner.rs
.github/workflows/: rust-ci.yml
.github/workflows/src/: test
Kube_appli/: cargo.toml
config_yaml/: api-kube.yaml  port.yaml
config_yaml/rbac/: binding.yaml  role.yaml  serviceaccount.yaml
src/: delete.rs  info.rs  main.rs  policy.rs  spawner.rs
src/endpoints/: main_test.rs
src/func_api/: delete.rs  describe_node.rs  info.rs  logs.rs  object.rs  policy.rs  spawner.rs
