[package]
name = "Kube_API"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
kube = { version = "0.87.2", features = ["client","runtime", "derive", "rustls-tls","ws"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
clap = { version = "4.5.20", d-features = false, features = ["std", "cargo", "derive"] }
futures = "0.3.31"
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
k8s-openapi = { version = "0.20.0", features = ["latest"] }
async-std = "1.13.0"  # Use the latest version