[package]
name = "Kube_API"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
kube = { version = "0.98", features = ["client","runtime", "derive", "rustls-tls","ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
clap = { version = "4.5", d-features = false, features = ["std", "cargo", "derive"] }
futures = "0.3"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
async-std = "1.13"  # Use the latest version